--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<svg class="crumina-icon" width="20" height="16">
 						<use xlink:href="#icon-users"></use>
 					</svg>
-					<a class="js-window-popup" href="24_contacts.html">Obtenez un devis sans frais</a>
+					<a class="js-window-popup" href="Contactez_nous.html">Obtenez un devis sans frais</a>
 				</div>
 			</div>
 
@@ -194,7 +194,7 @@
 						<li class="navigation-dropdown-item">
 
 							<!-- MAIN HEADER MENU DROPDOWN ITEM LINK -->
-							<a class="navigation-dropdown-link" href="05_service_details_localseo.html">
+							<a class="navigation-dropdown-link" href="Création_De_Site_Web_Marrakech.html">
 								<svg class="crumina-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8 0-.34.03-.68.08-1h3.04c-.05.33-.08.66-.08 1 0 3.31 2.69 6 6 6 .34 0 .68-.03 1-.08v3.04c-.33.05-.66.08-1 .08zm6.92-7h-3.04c.05-.33.08-.66.08-1 0-3.31-2.69-6-6-6-.34 0-.68.03-1 .08V4.92c.33-.05.66-.08 1-.08 4.41 0 8 3.59 8 8 0 .34-.03.68-.08 1zm-11.84 0H4.08c.05.33.08.66.08 1 0 3.31 2.69 6 6 6 .34 0 .68-.03 1-.08v-3.04c-.33.05-.66.08-1 .08-4.41 0-8-3.59-8-8 0-.34.03-.68.08-1h3.04c-.05.33-.08.66-.08 1 0 3.31 2.69 6 6 6 .34 0 .68-.03 1-.08V12c-.33.05-.66.08-1 .08-4.41 0-8-3.59-8-8 0-.34.03-.68.08-1h3.04c-.05.33-.08.66-.08 1 0 3.31 2.69 6 6 6 .34 0 .68-.03 1-.08V4.92c.33-.05.66-.08 1-.08 4.41 0 8 3.59 8 8 0 .34-.03.68-.08 1z" fill="#808080"/>
 								  </svg>
@@ -210,7 +210,7 @@
 						<li class="navigation-dropdown-item">
 
 							<!-- MAIN HEADER MENU DROPDOWN ITEM LINK -->
-							<a class="navigation-dropdown-link" href="07_service_email_marketing.html">
+							<a class="navigation-dropdown-link" href="Référencement_Web_SEO_Marrakech.html">
 								<svg class="crumina-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M20 18V3H4v15H2v2h20v-2h-2zm-2 0H6V5h12v13z" fill="#808080"/>
 								  </svg>
@@ -225,7 +225,7 @@
 						<li class="navigation-dropdown-item">
 
 							<!-- MAIN HEADER MENU DROPDOWN ITEM LINK -->
-							<a class="navigation-dropdown-link" href="06_service_details_social_media_marketing.html">
+							<a class="navigation-dropdown-link" href="Services_de_Développement_Sur_Mesure.html">
 								<svg class="crumina-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zM14.6 16.6l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z" fill="#808080"/>
 								  </svg>
@@ -240,7 +240,7 @@
 						<li class="navigation-dropdown-item">
 
 							<!-- MAIN HEADER MENU DROPDOWN ITEM LINK -->
-							<a class="navigation-dropdown-link" href="04_service_details_seo.html">
+							<a class="navigation-dropdown-link" href="Services_de_Maintenance_de_Sites_Web.html">
 								<svg class="crumina-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M4 3h16v4H4V3zm0 8h16v4H4v-4zm0 8h16v4H4v-4z" fill="#808080"/>
 								  </svg>
@@ -255,7 +255,7 @@
 						<li class="navigation-dropdown-item">
 
 							<!-- MAIN HEADER MENU DROPDOWN ITEM LINK -->
-							<a class="navigation-dropdown-link" href="08_service_ppc_management.html">
+							<a class="navigation-dropdown-link" href="Services_de_Gestion_des_Réseaux_Sociaux.html">
 								<svg class="crumina-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm1-13h-2v6h2v-6zm-1 9.07c-.56 0-1.02-.45-1.02-1.02s.45-1.02 1.02-1.02 1.02.45 1.02 1.02-.46 1.02-1.02 1.02z" fill="#808080"/>
 								  </svg>
@@ -270,7 +270,7 @@
 						<li class="navigation-dropdown-item">
 
 							<!-- MAIN HEADER MENU DROPDOWN ITEM LINK -->
-							<a class="navigation-dropdown-link" href="03_services.html">
+							<a class="navigation-dropdown-link" href="Création_Applications_Mobile_Android_IOS.html">
 								<svg class="crumina-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M16 2H8C7.46957 2 6.96086 2.21071 6.58579 2.58579C6.21071 2.96086 6 3.46957 6 4V20C6 20.5304 6.21071 21.0391 6.58579 21.4142C6.96086 21.7893 7.46957 22 8 22H16C16.5304 22 17.0391 21.7893 17.4142 21.4142C17.7893 21.0391 18 20.5304 18 20V4C18 3.46957 17.7893 2.96086 17.4142 2.58579C17.0391 2.21071 16.5304 2 16 2ZM14 19H10V18H14V19ZM16 16H8V5H16V16Z" fill="#808080"/>
 								  </svg>
@@ -378,7 +378,7 @@
 										<!-- /MAIN HEADER MEGA MENU LIST ITEM -->
 
 										<!-- MAIN HEADER MEGA MENU LIST ITEM -->
-										<li><a href="10_testimonials.html">Site Web Statique
+										<li><a href="Création_de_Sites_Internet_Statique.html">Site Web Statique
 											<svg class="crumina-icon arrow-right" width="12" height="10">
 												<use xlink:href="#icon-arrow-right"></use>
 											</svg>
@@ -386,7 +386,7 @@
 										<!-- /MAIN HEADER MEGA MENU LIST ITEM -->
 
 										<!-- MAIN HEADER MEGA MENU LIST ITEM -->
-										<li><a href="09_our_clients.html">Site Web Dynamique
+										<li><a href="Création_de_Sites_Internet_Dynamique.html">Site Web Dynamique
 											<svg class="crumina-icon arrow-right" width="12" height="10">
 												<use xlink:href="#icon-arrow-right"></use>
 											</svg>
@@ -394,7 +394,7 @@
 										<!-- /MAIN HEADER MEGA MENU LIST ITEM -->
 
 										<!-- MAIN HEADER MEGA MENU LIST ITEM -->
-										<li><a href="36_pricing_tables.html">Site Web Word press
+										<li><a href="Création_de_Sites_Internet_WordPress.html">Site Web Word press
 											<svg class="crumina-icon arrow-right" width="12" height="10">
 												<use xlink:href="#icon-arrow-right"></use>
 											</svg>
@@ -566,7 +566,7 @@
 				<li class="navigation-item">
 
 					<!-- MAIN HEADER MENU ITEM LINK -->
-					<a class="navigation-link" href="24_contacts.html">Contacts</a>
+					<a class="navigation-link" href="Contactez_nous.html">Contacts</a>
 					<!-- /MAIN HEADER MENU ITEM LINK -->
 
 				</li>
@@ -757,7 +757,7 @@
 
 									<p class="slider-content-text" data-swiper-parallax="-200">Développement sur mesure d'applications web et mobiles iOS et Android simplifié par OneClick</p>
 
-									<a href="24_contacts.html" class="crumina-button button--dark button--l">Contactez-nous</a>
+									<a href="Contactez_nous.html" class="crumina-button button--dark button--l">Contactez-nous</a>
 								
 
 								</div>
@@ -787,7 +787,7 @@
 									<p class="slider-content-text c-white" data-swiper-parallax="-200">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat eleifend option.</p>
 
 									<div class="universal-btn-wrapper">
-										<a href="05_service_details_localseo.html" class="crumina-button button--dark button--l">View Details</a>
+										<a href="Création_De_Site_Web_Marrakech.html" class="crumina-button button--dark button--l">View Details</a>
 										<a href="https://crumina.net/html-templates/" class="crumina-button button--white button--bordered button--with-icon button--icon-right button--l">
 											PURCHASE NOW
 											<svg class="crumina-icon" width="12" height="10">
@@ -830,8 +830,8 @@
 									<p class="slider-content-text c-white" data-swiper-parallax="-200">An effective social strategy can help you grow your business, maintain your social presence and engage with the audience.</p>
 
 									<div class="universal-btn-wrapper">
-										<a href="06_service_details_social_media_marketing.html" class="crumina-button button--dark button--l">VIEW DETAILS</a>
-										<a href="06_service_details_social_media_marketing.html" class="crumina-button button--white button--bordered button--l">
+										<a href="Services_de_Développement_Sur_Mesure.html" class="crumina-button button--dark button--l">VIEW DETAILS</a>
+										<a href="Services_de_Développement_Sur_Mesure.html" class="crumina-button button--white button--bordered button--l">
 											CHECK DETAILS
 										</a>
 									</div>
@@ -859,7 +859,7 @@
 
 									<div class="universal-btn-wrapper">
 										<a href="https://crumina.net/html-templates/" class="crumina-button button--dark button--l">BUY TOPTEN</a>
-										<a href="07_service_email_marketing.html" class="crumina-button button--dark button--bordered button--l">CHECK DETAILS</a>
+										<a href="Référencement_Web_SEO_Marrakech.html" class="crumina-button button--dark button--bordered button--l">CHECK DETAILS</a>
 									</div>
 
 								</div>
@@ -890,7 +890,7 @@
 
 									<div class="universal-btn-wrapper">
 										<a href="https://crumina.net/html-templates/" class="crumina-button button--dark button--l">BUY TOPTEN</a>
-										<a href="08_service_ppc_management.html" class="crumina-button button--white button--bordered button--l">VIEW DETAILS</a>
+										<a href="Services_de_Gestion_des_Réseaux_Sociaux.html" class="crumina-button button--white button--bordered button--l">VIEW DETAILS</a>
 									</div>
 
 								</div>
@@ -1110,7 +1110,7 @@
 					</ul>
 
 					<div class="universal-btn-wrapper element-anime-opacity-js">
-						<a href="03_services.html" class="crumina-button button--dark button--bordered button--l">LEARN MORE</a>
+						<a href="Création_Applications_Mobile_Android_IOS.html" class="crumina-button button--dark button--bordered button--l">LEARN MORE</a>
 						<a href="34_testimonials.html" class="crumina-button button--primary button--l">GET A QUOTE</a>
 					</div>
 				</div>
@@ -1226,7 +1226,7 @@
 			<div class="row mt-5 justify-content-center align-center">
 				<div class="col-lg-8 col-md-10 col-sm-12 col-xs-12">
 					<div class="universal-btn-wrapper element-anime-opacity-js">
-						<a href="36_pricing_tables.html" class="crumina-button button--dark button--l">MORE INFO</a>
+						<a href="36_pric.html" class="crumina-button button--dark button--l">MORE INFO</a>
 						<a href="https://crumina.net/html-templates/" class="crumina-button button--primary button--l">GET STARTED!</a>
 					</div>
 				</div>
@@ -1951,7 +1951,7 @@
 						<h4 class="widget-title">Services</h4>
 						<ul>
 							<li>
-								<a href="#03_services.html">
+								<a href="Création_Applications_Mobile_Android_IOS.html">
 									<svg class="crumina-icon" width="4" height="6">
 										<use xlink:href="#icon-arrow-triangle-left"></use>
 									</svg>
@@ -1959,7 +1959,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="08_service_ppc_management.html">
+								<a href="Services_de_Gestion_des_Réseaux_Sociaux.html">
 									<svg class="crumina-icon" width="4" height="6">
 										<use xlink:href="#icon-arrow-triangle-left"></use>
 									</svg>
@@ -1967,7 +1967,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="06_service_details_social_media_marketing.html">
+								<a href="Services_de_Développement_Sur_Mesure.html">
 									<svg class="crumina-icon" width="4" height="6">
 										<use xlink:href="#icon-arrow-triangle-left"></use>
 									</svg>
